--- a/app/index.html
+++ b/app/index.html
@@ -90,12 +90,12 @@
   <div id="features" class="page-section page-section__blue">
     <div class="wrapper">
 
-      <h2 class="section-title"> <img  class="section-title__icon" src="assets/images/icons/star.svg">Our <strong>Features</strong></h2>
+      <h2 class="section-title" > <span class=" icon icon--star section-title__icon"></span>Our <strong>Features</strong></h2>
 
       <div class="row row__gutters-large generic-content-container ">
         <div class="row__medium-6">
           <div class="feature-item">
-            <img class="feature-item__icon" src="assets/images/icons/rain.svg">
+            <span class="feature-item__icon icon icon--rain"></span>
             <h3 class="feature-item__title">We&rsquo;ll Watch the Weather</h3>
             <p>Download our app and we&rsquo;
               ll send you a notice if it&rsquo;
@@ -104,7 +104,7 @@
               but sometimes you just want to stay dry.</p>
           </div>
           <div class="feature-item">
-            <img class="feature-item__icon" src="assets/images/icons/globe.svg">
+             <span class="feature-item__icon icon icon--globe"></span>
             <h3 class="feature-item__title">Global Guides</h3>
             <p>We&rsquo;ve scoured the entire planet for the best retreats and beautiful vistas. If there&rsquo;
               s a corner of the world you want to escape to we know the most scenic and inspiring locations.</p>
@@ -112,7 +112,7 @@
         </div>
         <div class="row__medium-6">
           <div class="feature-item">
-            <img class="feature-item__icon" src="assets/images/icons/wifi.svg">
+            <span class="feature-item__icon icon icon--wifi"></span>
             <h3 class="feature-item__title">Wi-Fi Waypoints</h3>
             <p>We only send you on trips to places we can personally vouch for as being amazing.
                Which means we&rsquo;
@@ -120,7 +120,7 @@
                s map view.</p>
           </div>
           <div class="feature-item">
-            <img class="feature-item__icon" src="assets/images/icons/fire.svg">
+            <span class="feature-item__icon icon icon--fire"></span>
             <h3 class="feature-item__title">Survival Kit</h3>
             <p>Everytime you book an escape with us we send you a survival kit with the finest materials.
                The kit will allow you to setup a tent,
@@ -134,24 +134,56 @@
 
     </div>
 
-  <div id="testimonials">
-    <img src="assets/images/icons/comment.svg">
-    <h2>Real Testimonials</h2>
+  <div id="testimonials" class="page-section page-section__testimonials  page-section__no-b-padding-until-Large">
+    <div class="wrapper wrapper__no-padding-until-Large">
+      <h2 class="section-title section-title__blue"><span class="section-title__icon icon icon--comment"></span>Real <strong>Testimonials</strong></h2>
+      <div class="row row__gutters row__gutters-small row__equal-height-at-Large row__t-padding generic-content-container">
+        <div class="row__Large-4">
+          <div class="testimonial">
+            <div class="testimonial__photo">
+            <img sizes="160px"  srcset="assets/images/testimonial-jane.jpg 160w,
+                          assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
+            </div>
+            <h3 class="testimonial__title">Jane Doe</h3>
+            <h4 class="testimonial__subtitle">9 Time Escaper</h4>
+            <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+               Excepteur sint occaecat cupidatat non proident,
+               sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet,
+               consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
+          </div>
+          </div>
 
-    <img src="assets/images/testimonial-jane.jpg">
-    <h3>Jane Doe</h3>
-    <h3>9 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
+        <div class="row__Large-4">
+          <div class="testimonial">
+            <div class="testimonial__photo">
+            <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w,
+                      assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
+            </div>
+            <h3 class="testimonial__title">John Smith</h3>
+            <h4 class="testimonial__subtitle">4 Time Escaper</h4>
+            <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+               Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+               Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
+          </div>
 
-    <img src="assets/images/testimonial-john.jpg">
-    <h3>John Smith</h3>
-    <h3>4 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
+        </div>
+        <div class="row__Large-4">
+          <div class="testimonial testimonial__last">
+            <div class="testimonial__photo">
+              <img sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w,
+                       assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
+            </div>
+            <h3 class="testimonial__title">Cat McKitty</h3>
+            <h4 class="testimonial__subtitle">6 Time Escaper</h4>
+            <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+               Excepteur sint occaecat cupidatat non proident,
+               sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+               sed do eiusmod tempor incididunt ut.&rdquo;</p>
+          </div>
 
-    <img src="assets/images/testimonial-cat.jpg">
-    <h3>Cat McKitty</h3>
-    <h3>6 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
+        </div>
+      </div>
+    </div>
   </div>
 
   <footer>
