--- a/app/index.html
+++ b/app/index.html
@@ -137,7 +137,7 @@
   <div id="testimonials" class="page-section page-section__testimonials  page-section__no-b-padding-until-Large">
     <div class="wrapper wrapper__no-padding-until-Large">
 
-      
+
 
       <h2 class="section-title section-title__blue"><span class="section-title__icon icon icon--comment"></span>Real <strong>Testimonials</strong></h2>
 
@@ -190,8 +190,13 @@
     </div>
   </div>
 
-  <footer>
-    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn btn__orange">Get in Touch</a></p>
-  </footer>
+  <footer class="site-footer">
+    <div class="wrapper">
+      <p><span class="site-footer__text">Copyright &copy;
+        2016 Clear View Escapes. All rights reserved.</span>
+        <a href="#" class="btn btn__orange">Get in Touch</a></p>
+    </footer>
+    </div>
+
 </body>
 </html>
