--- a/app/index.html
+++ b/app/index.html
@@ -23,9 +23,9 @@
         </div>
         <nav class="primary-nav primary-nav__pull-right">
           <ul>
-            <li><a href="#our-beginning">Our Beginning</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#our-beginning" id="our-beginning-link">Our Beginning</a></li>
+            <li><a href="#features" id="features-link">Features</a></li>
+            <li><a href="#testimonials" id="testimonials-link">Testimonials</a></li>
           </ul>
         </nav>
       </div>
@@ -54,7 +54,7 @@
     </div>
   </div>
 
-  <div id="our-beginning" class="page-section wrapper">
+  <div id="our-beginning" class="page-section wrapper" data-matching-link="#our-beginning-link" >
     <div class="wrapper">
       <h2 class="headline headline__centered headline__lieght headline__b-margin-small ">The first trip we planned <strong>was our own.</strong></h2>
       <h3 class="headline headline__centered headline__orange headline__small headline__narrow headline__b-margin-large">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
@@ -100,7 +100,7 @@
 
   </div>
 
-  <div id="features" class="page-section page-section__blue">
+  <div id="features" class="page-section page-section__blue" data-matching-link="#features-link">
     <div class="wrapper">
 
       <h2 class="section-title" > <span class=" icon icon--star section-title__icon"></span>Our <strong>Features</strong></h2>
@@ -147,7 +147,7 @@
 
     </div>
 
-  <div id="testimonials" class="page-section page-section__testimonials  page-section__no-b-padding-until-Large">
+  <div id="testimonials" class="page-section page-section__testimonials  page-section__no-b-padding-until-Large" data-matching-link="#testimonials-link">
     <div class="wrapper wrapper__no-padding-until-Large">
 
 
