--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="site-header__menu-content ">
         <div class="site-header__btn-container">
-          <a href="#" class="btn">Get in Touch</a>
+          <a href="#" class="btn open-modal">Get in Touch</a>
         </div>
         <nav class="primary-nav primary-nav__pull-right">
           <ul>
@@ -207,9 +207,30 @@
     <div class="wrapper">
       <p><span class="site-footer__text">Copyright &copy;
         2016 Clear View Escapes. All rights reserved.</span>
-        <a href="#" class="btn btn__orange">Get in Touch</a></p>
+        <a href="#" class="btn btn__orange open-modal">Get in Touch</a></p>
+        </div>
     </footer>
+
+    <div class="modal">
+  <div class="modal__inner">
+    <h2 class="section-title section-title__blue section-title__less-margin"><span class="section-title__icon icon icon--mail"></span>Get in <strong>Touch</strong></h2>
+    <div class="wrapper wrapper__narrow">
+      <p class="modal__description">We will have an online order system in place soon.Until then,
+        connect with us on any of the platforms below  </p>
+        <div class="social-icons">
+          <a href="#" class="social-icons__icon"><span class=" icon icon--facebook"></span></a>
+          <a href="#" class="social-icons__icon"><span class=" icon icon--twitter"></span></a>
+          <a href="#" class="social-icons__icon"><span class=" icon icon--instagram"></span></a>
+          <a href="#" class="social-icons__icon"><span class=" icon icon--youtube"></span></a>
+        </div>
+
+  </div>
+</div>
+      <div class="modal__close">X</div>
+
+
     </div>
+
 <script src="/temp/scripts/app.js">
 
 </script>
