--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
       </div>
 
       <link rel="stylesheet" href="temp/styles/styles.css">
+      <script src="/temp/scripts/vendor.js"></script>
     </div>
 
   </header>
@@ -59,18 +60,18 @@
       <h2 class="headline headline__centered headline__lieght headline__b-margin-small ">The first trip we planned <strong>was our own.</strong></h2>
       <h3 class="headline headline__centered headline__orange headline__small headline__narrow headline__b-margin-large">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
       <div class="wrapper wrapper__medium wrapper__b-margin">
-        <img  sizes="(min-width:970px) 976px,100vw"srcset="assets/images/first-trip-low-res-i.jpg 565w,
+        <img   class="lazyload"sizes="(min-width:970px) 976px,100vw"data-srcset="assets/images/first-trip-low-res-i.jpg 565w,
                      assets/images/first-trip-i.jpg 976w,
                      assets/images/first-trip-hi-dpi-i.jpg 1952w" alt="Couple walking down a street.">
       </div>
       <div class="row row__gutters">
         <div class="row__medium-4 row__medium-4__larger row__b-margin-until-medium">
           <picture>
-            <source sizes="404px" srcset="assets/images/our-start.jpg 404w,
+            <source sizes="404px" dat-srcset="assets/images/our-start.jpg 404w,
             assets/images/our-start-hi-dpi.jpg 808w" media="(min-width:1020px)">
-          <source  sizes="320px"srcset="assets/images/our-start-portrait.jpg 382w,
+          <source  sizes="320px"data-srcset="assets/images/our-start-portrait.jpg 382w,
           assets/images/our-start-portrait-hi-dpi.jpg 764w" media="(min-width:800px)">
-          <img srcset="assets/images/our-start-landscape.jpg 880w,
+          <img class="lazyload" data-srcset="assets/images/our-start-landscape.jpg 880w,
           assets/images/our-start-landscape-hi-dpi.jpg 1600w" alt="Our founder,
           Jane Doe">
           </picture>
@@ -147,7 +148,7 @@
 
     </div>
 
-  <div id="testimonials" class="page-section page-section__testimonials  page-section__no-b-padding-until-Large" data-matching-link="#testimonials-link">
+  <div id="testimonials" class="page-section page-section__testimonials  page-section__no-b-padding-until-Large lazyload" data-matching-link="#testimonials-link">
     <div class="wrapper wrapper__no-padding-until-Large">
 
 
@@ -158,7 +159,7 @@
         <div class="row__Large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-            <img sizes="160px"  srcset="assets/images/testimonial-jane.jpg 160w,
+            <img class="lazyload" sizes="160px"  data-srcset="assets/images/testimonial-jane.jpg 160w,
                           assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
             </div>
             <h3 class="testimonial__title">Jane Doe</h3>
@@ -173,7 +174,7 @@
         <div class="row__Large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-            <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w,
+            <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-john.jpg 160w,
                       assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
             </div>
             <h3 class="testimonial__title">John Smith</h3>
@@ -187,7 +188,7 @@
         <div class="row__Large-4">
           <div class="testimonial testimonial__last">
             <div class="testimonial__photo">
-              <img sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w,
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-cat.jpg 160w,
                        assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
             </div>
             <h3 class="testimonial__title">Cat McKitty</h3>
